[tool.poetry]
name = "reproducing-pokemon-red-rl"
version = "0.1.0"
description = ""
authors = ["Rami-Ismael <rami.m.ismael@gmail.com>"]
readme = "README.md"
packages = [{include = "reproducing_pokemon_red_rl"}]

[tool.poetry.dependencies]
python = "^3.9 ,<3.11"
torch = "^2.1.1"
pufferlib = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
